linux-openmoko-devel: update to 2.6.23.1

--- a/packages/linux/linux-openmoko-devel/defconfig-2.6.23.1
+++ b/packages/linux/linux-openmoko-devel/defconfig-2.6.23.1
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.23-rc9
-# Sun Oct  7 15:39:12 2007
+# Tue Oct  9 15:27:11 2007
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -199,6 +199,7 @@ CONFIG_ARCH_S3C2440=y
 CONFIG_SMDK2440_CPU2440=y
 CONFIG_MACH_HXD8=y
 CONFIG_MACH_NEO1973_GTA02=y
+CONFIG_CPU_S3C2442=y
 
 #
 # S3C2442 Machines
@@ -1735,8 +1736,8 @@ CONFIG_FORCED_INLINING=y
 CONFIG_DEBUG_ERRORS=y
 CONFIG_DEBUG_LL=y
 # CONFIG_DEBUG_ICEDCC is not set
-# CONFIG_DEBUG_S3C_PORT is not set
-CONFIG_DEBUG_S3C_UART=0
+CONFIG_DEBUG_S3C_PORT=y
+CONFIG_DEBUG_S3C_UART=2
 
 #
 # Security options
