--- a/packages/mono/README
+++ b/packages/mono/README
@@ -23,17 +23,11 @@ then proceeds to overlay the native binaries in the install directory.
 ================================
 mono.bbclass
 
-Has a helper function for the list that maps file patterns to package
-names and assemblies (see below). Also has a function mono_do_clilibs
-and inserts that function into PACKAGEFUNCS. This function calls
-mono_find_provides_and_requires which finds out (through calls to
-monodis --assembly and monodis --assemblyref) which assemblies are
+Has a function mono_do_clilibs and inserts that function into PACKAGEFUNCS.
+This function calls mono_find_provides_and_requires which finds out (through
+calls to monodis --assembly and monodis --assemblyref) which assemblies are
 provided and required by a particular package. mono_do_clilibs then
 puts the information about provided assemblies into
 ${STAGING_DIR}/clilibs/${packagename}.list and information about the
 required packages into ${PKGDEST}/{packagename}.clilibdeps where it
-will later be picked up by the modified read_shlibdeps.
-
-
-
-
+will later be picked up by read_shlibdeps.
