linux-openmoko/defconfig-2.6.22.5 : bring upto date, sound is now modules again because I need it that way to debug it.

--- a/packages/linux/linux-openmoko/defconfig-2.6.22.5
+++ b/packages/linux/linux-openmoko/defconfig-2.6.22.5
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.22.5
-# Wed Oct  3 13:55:25 2007
+# Thu Nov  8 21:49:01 2007
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -166,6 +166,7 @@ CONFIG_CPU_S3C2410_DMA=y
 CONFIG_S3C2410_PM=y
 CONFIG_S3C2410_GPIO=y
 CONFIG_S3C2410_CLOCK=y
+CONFIG_S3C2410_PWM=y
 
 #
 # S3C2410 Machines
@@ -252,7 +253,8 @@ CONFIG_ARM_THUMB=y
 CONFIG_PREEMPT=y
 CONFIG_NO_IDLE_HZ=y
 CONFIG_HZ=200
-# CONFIG_AEABI is not set
+CONFIG_AEABI=y
+CONFIG_OABI_COMPAT=y
 # CONFIG_ARCH_DISCONTIGMEM_ENABLE is not set
 CONFIG_SELECT_MEMORY_MODEL=y
 CONFIG_FLATMEM_MANUAL=y
@@ -271,7 +273,7 @@ CONFIG_ALIGNMENT_TRAP=y
 #
 CONFIG_ZBOOT_ROM_TEXT=0x0
 CONFIG_ZBOOT_ROM_BSS=0x0
-CONFIG_CMDLINE="ip=192.168.1.2:192.168.1.10:192.168.1.10:255.255.255.0:ezx:usb0:off"
+CONFIG_CMDLINE="unused -- bootloader passes ATAG list"
 # CONFIG_XIP_KERNEL is not set
 CONFIG_KEXEC=y
 
@@ -292,7 +294,6 @@ CONFIG_FPE_NWFPE=y
 CONFIG_BINFMT_ELF=y
 # CONFIG_BINFMT_AOUT is not set
 # CONFIG_BINFMT_MISC is not set
-# CONFIG_ARTHUR is not set
 
 #
 # Power management options
@@ -1049,6 +1050,7 @@ CONFIG_SPI_S3C24XX_GPIO=y
 # CONFIG_SPI_AT25 is not set
 # CONFIG_SPI_SPIDEV is not set
 CONFIG_SPI_SLAVE_JBT6K74=y
+# CONFIG_SPI_SLAVE_LIS302DL is not set
 
 #
 # Dallas's 1-wire bus
@@ -1121,6 +1123,7 @@ CONFIG_LEDS_CLASS=y
 #
 CONFIG_LEDS_S3C24XX=m
 CONFIG_LEDS_GTA01=y
+# CONFIG_LEDS_GTA02 is not set
 
 #
 # LED Triggers
@@ -1207,15 +1210,15 @@ CONFIG_SOUND=y
 #
 # Advanced Linux Sound Architecture
 #
-CONFIG_SND=y
-CONFIG_SND_TIMER=y
-CONFIG_SND_PCM=y
+CONFIG_SND=m
+CONFIG_SND_TIMER=m
+CONFIG_SND_PCM=m
 CONFIG_SND_HWDEP=m
 CONFIG_SND_RAWMIDI=m
 # CONFIG_SND_SEQUENCER is not set
 CONFIG_SND_OSSEMUL=y
-CONFIG_SND_MIXER_OSS=y
-CONFIG_SND_PCM_OSS=y
+CONFIG_SND_MIXER_OSS=m
+CONFIG_SND_PCM_OSS=m
 CONFIG_SND_PCM_OSS_PLUGINS=y
 # CONFIG_SND_DYNAMIC_MINORS is not set
 CONFIG_SND_SUPPORT_OLD_API=y
@@ -1244,7 +1247,7 @@ CONFIG_SND_USB_AUDIO=m
 #
 # System on Chip audio support
 #
-CONFIG_SND_SOC=y
+CONFIG_SND_SOC=m
 CONFIG_SND_S3C24XX_SOC=m
 CONFIG_SND_S3C24XX_SOC_I2S=m
 CONFIG_SND_S3C24XX_SOC_NEO1973_WM8753=m
@@ -1294,7 +1297,7 @@ CONFIG_USB=y
 CONFIG_USB_DEVICEFS=y
 CONFIG_USB_DEVICE_CLASS=y
 # CONFIG_USB_DYNAMIC_MINORS is not set
-# CONFIG_USB_SUSPEND is not set
+CONFIG_USB_SUSPEND=y
 # CONFIG_USB_OTG is not set
 
 #
@@ -1717,7 +1720,7 @@ CONFIG_DEBUG_KERNEL=y
 # CONFIG_DEBUG_SHIRQ is not set
 CONFIG_DETECT_SOFTLOCKUP=y
 # CONFIG_SCHEDSTATS is not set
-# CONFIG_TIMER_STATS is not set
+CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_SLAB is not set
 CONFIG_DEBUG_PREEMPT=y
 # CONFIG_DEBUG_RT_MUTEXES is not set
