xserver-kdrive_1.3.0.0.bb : add Xglamo server for Neo1973

--- a/packages/linux/linux-openmoko/defconfig-2.6.22.5
+++ b/packages/linux/linux-openmoko/defconfig-2.6.22.5
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.22.5
-# Mon Nov 12 08:23:42 2007
+# Wed Nov 21 11:45:19 2007
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -1257,7 +1257,7 @@ CONFIG_SND_SOC=m
 CONFIG_SND_S3C24XX_SOC=m
 CONFIG_SND_S3C24XX_SOC_I2S=m
 CONFIG_SND_S3C24XX_SOC_NEO1973_WM8753=m
-# CONFIG_SND_S3C24XX_SOC_NEO1973_GTA02_WM8753 is not set
+CONFIG_SND_S3C24XX_SOC_NEO1973_GTA02_WM8753=m
 
 #
 # SoC Audio support for SuperH
