linux-openmoko_2.6.22.5.bb : CONFIG_MTD_NAND_S3C2410_CLKSTOP breaks accessing the mtd partitions from usespace so disable for now.

--- a/packages/linux/linux-openmoko/defconfig-2.6.22.5
+++ b/packages/linux/linux-openmoko/defconfig-2.6.22.5
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.22.5
-# Wed Nov 21 11:45:19 2007
+# Tue Nov 27 09:09:32 2007
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -705,7 +705,7 @@ CONFIG_MTD_NAND_S3C2410=y
 CONFIG_MTD_NAND_S3C2410_BBT=y
 # CONFIG_MTD_NAND_S3C2410_DEBUG is not set
 CONFIG_MTD_NAND_S3C2410_HWECC=y
-CONFIG_MTD_NAND_S3C2410_CLKSTOP=y
+# CONFIG_MTD_NAND_S3C2410_CLKSTOP is not set
 # CONFIG_MTD_NAND_DISKONCHIP is not set
 # CONFIG_MTD_NAND_NANDSIM is not set
 # CONFIG_MTD_NAND_PLATFORM is not set
