--- a/packages/linux/linux-ixp4xx/defconfig-2.6.21.6
+++ b/packages/linux/linux-ixp4xx/defconfig-2.6.21.6
@@ -222,7 +222,7 @@ CONFIG_ALIGNMENT_TRAP=y
 #
 CONFIG_ZBOOT_ROM_TEXT=0x0
 CONFIG_ZBOOT_ROM_BSS=0x0
-CONFIG_CMDLINE=" noirqdebug console=ttyS0,115200n8"
+CONFIG_CMDLINE="root=/dev/nfs rootfstype=nfs ip=dhcp noirqdebug console=ttyS0,115200n8"
 # CONFIG_XIP_KERNEL is not set
 CONFIG_KEXEC=y
 
@@ -271,7 +271,10 @@ CONFIG_INET=y
 # CONFIG_IP_MULTICAST is not set
 # CONFIG_IP_ADVANCED_ROUTER is not set
 CONFIG_IP_FIB_HASH=y
-# CONFIG_IP_PNP is not set
+CONFIG_IP_PNP=y
+CONFIG_IP_PNP_DHCP=y
+# CONFIG_IP_PNP_BOOTP is not set
+# CONFIG_IP_PNP_RARP is not set
 # CONFIG_NET_IPIP is not set
 # CONFIG_NET_IPGRE is not set
 # CONFIG_ARPD is not set
@@ -888,12 +891,12 @@ CONFIG_TUN=m
 # Ethernet (10 or 100Mbit)
 #
 CONFIG_NET_ETHERNET=y
-CONFIG_MII=m
-CONFIG_IXP4XX_QMGR=m
+CONFIG_MII=y
+CONFIG_IXP4XX_QMGR=y
 CONFIG_IXP4XX_NPE=y
 CONFIG_IXP4XX_NPE_FW_LOAD=y
 CONFIG_IXP4XX_NPE_FW_MTD=y
-CONFIG_IXP4XX_MAC=m
+CONFIG_IXP4XX_MAC=y
 CONFIG_IXP4XX_CRYPTO=m
 # CONFIG_HAPPYMEAL is not set
 # CONFIG_SUNGEM is not set
@@ -944,7 +947,7 @@ CONFIG_R8169_VLAN=y
 # CONFIG_SKGE is not set
 # CONFIG_SKY2 is not set
 # CONFIG_SK98LIN is not set
-CONFIG_VIA_VELOCITY=m
+CONFIG_VIA_VELOCITY=y
 # CONFIG_TIGON3 is not set
 # CONFIG_BNX2 is not set
 # CONFIG_QLA3XXX is not set
@@ -1895,7 +1898,7 @@ CONFIG_SQUASHFS_FRAGMENT_CACHE_SIZE=3
 #
 # Network File Systems
 #
-CONFIG_NFS_FS=m
+CONFIG_NFS_FS=y
 CONFIG_NFS_V3=y
 # CONFIG_NFS_V3_ACL is not set
 # CONFIG_NFS_V4 is not set
@@ -1905,13 +1908,14 @@ CONFIG_NFSD_V3=y
 # CONFIG_NFSD_V3_ACL is not set
 CONFIG_NFSD_V4=y
 CONFIG_NFSD_TCP=y
-CONFIG_LOCKD=m
+CONFIG_ROOT_NFS=y
+CONFIG_LOCKD=y
 CONFIG_LOCKD_V4=y
 CONFIG_EXPORTFS=m
 CONFIG_NFS_COMMON=y
-CONFIG_SUNRPC=m
-CONFIG_SUNRPC_GSS=m
-CONFIG_RPCSEC_GSS_KRB5=m
+CONFIG_SUNRPC=y
+CONFIG_SUNRPC_GSS=y
+CONFIG_RPCSEC_GSS_KRB5=y
 # CONFIG_RPCSEC_GSS_SPKM3 is not set
 CONFIG_SMB_FS=m
 # CONFIG_SMB_NLS_DEFAULT is not set
